# objects

./: .clang-format  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  classobj_1_1ObjectsException-members.html  classobj_1_1ObjectsException.html  classobj_1_1SmartPtr-members.html  classobj_1_1SmartPtr.html  classobj_1_1SmartPtr.js  classobj_1_1hlp_1_1DynamicObject-members.html  classobj_1_1hlp_1_1DynamicObject.html  classobj_1_1hlp_1_1DynamicObject.js  classobj_1_1hlp_1_1ObjectBase-members.html  classobj_1_1hlp_1_1ObjectBase.html  classobj_1_1hlp_1_1ObjectBase.js  classobj_1_1hlp_1_1details_1_1GenericRefCounter-members.html  classobj_1_1hlp_1_1details_1_1GenericRefCounter.html  classobj_1_1hlp_1_1details_1_1GenericRefCounter.js  common_8hpp_source.html  details_2objects_8hpp_source.html  dir_ae5bdaf1b45f3c0e6fd5dd3984d2eafd.html  dir_ae5bdaf1b45f3c0e6fd5dd3984d2eafd.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  exception_8hpp_source.html  files.html  helpers_8hpp_source.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js  objects_8hpp.html  objects_8hpp_source.html  pointer_8hpp_source.html
.github/workflows/: publich_documentation.yaml
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp
examples/streams/: CMakeLists.txt  main.cpp  stream.cpp  stream.h
include/: objects.hpp
include/details/: common.hpp  exception.hpp  helpers.hpp  objects.hpp  pointer.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  pages_0.js  searchdata.js
